# rctd-rust

./: .gitignore  CLAUDE.md  README.md
benchmarks/: bench_gpu.py  bench_gpu_baseline.py
docs/: tutorial.html
docs/plans/: 100-percent-matching-roadmap.md
examples/: tutorial.py
python/: CITATION.cff  CLAUDE.md  CONTRIBUTING.md  pyproject.toml
python/benchmarks/: SBATCH_benchmark_visiumhd.sh  SBATCH_visiumhd_proportions.sh  bench_visiumhd.py  program.md  visiumhd_proportions.py
python/docs/plans/: 2026-03-17-cli-design.md  2026-03-17-cli-implementation.md
python/examples/: tutorial.py
python/src/rctd/: __init__.py  _irwls.py  _version.py  cli.py
rust/: Cargo.toml
rust/crates/rctd/: Cargo.toml
rust/crates/rctd-core/: Cargo.toml
rust/crates/rctd-core/benches/: bench_full_mode.rs
rust/crates/rctd-core/src/: backend.rs  calc_q.rs  doublet.rs  full.rs  io_npz.rs  irwls.rs  irwls_native.rs  lib.rs  likelihood_tables.rs  linalg.rs  multi.rs  normalize.rs  pipeline.rs  qp.rs  sigma.rs  simplex.rs  types.rs
rust/crates/rctd-core/tests/: deconv_smoke.rs  parity_likelihood.rs  parity_synthetic.rs  spike_backend.rs  xenium_smoke.rs
rust/crates/rctd-core/tests/common/: mod.rs
rust/crates/rctd-core/tests/fixtures/: mini_deconv.npz  mini_full.npz  mini_full_hash.txt  parity_synthetic.npz
rust/crates/rctd/resources/: export_rds_bridge.R
rust/crates/rctd/src/: bench.rs  device_sel.rs  main.rs  ref_adata.rs  ref_rds.rs
src/rctd/: _doublet.py  _full.py  _irwls.py  _multi.py  _sigma.py  cli.py
tests/: test_cli.py  test_irwls.py  test_performance.py
